Allow MapViewerController to use existing mapserver configuration or newer camptocamp mode